# advent-of-fpga-2024

./: README.md
fpga/: .gitignore
fpga/input_parser/: day01.ml  day02.ml  day03.ml  day04.ml  day04.mli  day05.ml  day07.ml  day13.ml  dune  util.ml  util.mli
fpga/src/: blinky.ml  build.ml  control.ml  day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day07.ml  day13.ml  day22_pt1.ml  day22_pt2.ml  dune  loadable_pseudo_dual_port_ram.ml  loadable_pseudo_dual_port_ram.mli  print_decimal_outputs.ml  uart.ml  uart.mli  uart_test.ml  ulx3s.mli  ulx3s_top.ml  ulx3s_top.mli
fpga/test/: dune  test_day01.ml  test_day02.ml  test_day03.ml  test_day04.ml  test_day05.ml  test_day07.ml  test_day13.ml  test_day22_pt1.ml  test_divider_bug.ml  test_uart.ml  test_wrapper.ml
inputs/: sample7-extratest.txt
python_models/: .gitignore  d1.py  d10-analysis.py  d11-analysis.py  d13.py  d14-analysis.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9-analysis.py  parsing_util.py  util.py
