(library
 (name advent_of_fpga_input_parser)
 (libraries async base64 core core_unix re)
 (inline_tests)
 (preprocessor_deps embedded.txt)
 (preprocess
  (pps ppx_jane ppx_embed_file)))

(rule
 (target embedded.txt)
 (deps
  (glob_files %{project_root}/inputs/*))
 (action
  (chdir
   %{project_root}/inputs
   (run sh -c "./embed.sh > %{target}"))))
